--- a/res/layout/call_card.xml
+++ b/res/layout/call_card.xml
@@ -50,4 +50,13 @@
          android:layout_height="0dp"
          android:layout_weight="1" />
 
+    <TextView android:id="@+id/city"
+           android:paddingLeft="6.0dip"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:singleLine="true"
+           android:textAppearance="?android:textAppearanceSmall"
+           android:textSize="18.0sp"
+           android:textColor="?android:textColorSecondary" />
+
 </com.android.phone.CallCard>
